fix inner scrollbar bug

--- a/assets/scss/components/_primary-nav.scss
+++ b/assets/scss/components/_primary-nav.scss
@@ -499,7 +499,7 @@
 //     }
 //   }
 // }
-html, body {
+body {
   overflow-x: hidden;
 }
 
